--- a/src/app/student/student-dashboard/student-form/student-form.component.html
+++ b/src/app/student/student-dashboard/student-form/student-form.component.html
@@ -1,4 +1,4 @@
-<div class="form  rounded  border p-4">
+<div class="form  rounded  border p-4 mb-4">
     <div class="form-group">
         <label for="fname">First Name</label>
         <input type="text" class="form-control" #fname>
