--- a/src/app/student/student-dashboard/student-table/student-table.component.html
+++ b/src/app/student/student-dashboard/student-table/student-table.component.html
@@ -1,5 +1,5 @@
 <div class="table-responsive">
-    <table class="table table-bordered  text-center">
+    <table class="table table-bordered table-dark text-center">
         <thead>
             <tr>
                 <th>Sr No</th>
